--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -65,6 +65,7 @@ form input[type=text] {
     background-color: #eee;
 }
 
+
 .username:hover {
     font-weight: 800;
     font-style: bold;
@@ -85,5 +86,6 @@ form input[type=text] {
     padding: 10px;
 }
 
-input {
+.friend {
+    font-style: bold;
 }
